--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700;900&display=swap');
-        body { font-family: 'Noto Sans TC', sans-serif; background-color: #334155; }
+        body { font-family: 'Noto Sans TC', sans-serif; background-color: #334155; -webkit-tap-highlight-color: transparent; }
         .animate-card { animation: slideIn 0.5s ease-out forwards; }
         @keyframes slideIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     </style>
@@ -22,6 +22,7 @@
     <script type="text/babel">
         const { useState, useEffect } = React;
         const App = () => {
+            const [status, setStatus] = useState('idle');
             const [formData, setFormData] = useState({
                 'entry.1997557929': '', 
                 'entry.1678700766': '', 
@@ -45,8 +46,9 @@
                 }));
             }, []);
 
-            const handleNotify = () => {
-                // 僅負責 Line 通知，不干涉表單提交
+            // ⚠️ 完全套用您「成功回傳版」的 handleSubmit 邏輯
+            const handleSubmit = () => {
+                setStatus('submitting');
                 const gasUrl = "https://script.google.com/macros/s/AKfycbS7zuTQw8emGzffRjTS-4omSBvr77rQin1wLcr8R7o16VzxBw6Wzf9mMr17ceHP7c/exec";
                 fetch(gasUrl, {
                     method: "POST",
@@ -61,19 +63,35 @@
                         "issue": formData['entry.2061708184']
                     })
                 });
+                setTimeout(() => {
+                    setStatus('submitted');
+                    window.scrollTo({ top: 0, behavior: 'smooth' });
+                }, 1500);
             };
+
+            if (status === 'submitted') return (
+                <div className="min-h-screen flex items-center justify-center p-6 text-center">
+                    <div className="max-w-md w-full bg-white p-12 rounded-[3rem] shadow-2xl border-t-[15px] border-sky-600 animate-card">
+                        <div className="text-7xl mb-6">✅</div>
+                        <h2 className="text-3xl font-black text-slate-800 mb-4">通報成功！</h2>
+                        <button onClick={() => window.location.reload()} className="w-full bg-sky-600 text-white py-5 rounded-3xl font-black text-xl shadow-xl active:scale-95 transition-all">下一筆通報</button>
+                    </div>
+                </div>
+            );
 
             return (
                 <div className="min-h-screen pb-12">
                     <header className="bg-gradient-to-br from-slate-900 via-slate-800 to-sky-900 text-white py-14 px-6 text-center shadow-2xl">
                         <h1 className="text-3xl font-black tracking-widest text-white">日益智慧能源</h1>
-                        <p className="text-sky-400 mt-2 font-bold text-sm tracking-[0.3em] uppercase underline decoration-green-500 decoration-2">異常問題紀錄單</p>
+                        <p className="text-sky-400 mt-2 font-bold text-sm tracking-[0.3em] uppercase underline decoration-green-500">異常問題紀錄單</p>
                     </header>
                     <main className="max-w-xl mx-auto -mt-10 px-4">
+                        <iframe name="hidden_confirm" style={{display:'none'}}></iframe>
                         <form 
                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSctQVHtvkom4MQ_iCxMSctMp5cvTN7ZLJSBTPvBV3GBx_1Vmw/formResponse" 
                             method="POST" 
-                            onSubmit={handleNotify}
+                            target="hidden_confirm" 
+                            onSubmit={handleSubmit}
                             className="space-y-5"
                         >
                             <div className="bg-white p-6 rounded-[2rem] shadow-lg border-l-[10px] border-amber-500 animate-card">
@@ -81,29 +99,39 @@
                                 <div className="text-2xl font-black text-slate-700">{formData['entry.1997557929']}</div>
                                 <input type="hidden" name="entry.1997557929" value={formData['entry.1997557929']} />
                             </div>
+
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500">1. 填表人員 *</label>
                                 <input required type="text" name="entry.1678700766" onChange={(e)=>setFormData({...formData,'entry.1678700766':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl font-bold" placeholder="輸入姓名" />
                             </div>
+
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500">2. 案場名稱 *</label>
                                 <input required type="text" name="entry.131097778" onChange={(e)=>setFormData({...formData,'entry.131097778':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl font-bold" placeholder="輸入案場" />
                             </div>
+
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500">3. 區域選擇 *</label>
-                                <select required name="entry.980213033" onChange={(e)=>setFormData({...formData,'entry.980213033':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl font-bold">
+                                <select required name="entry.980213033" onChange={(e)=>setFormData({...formData,'entry.980213033':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl font-bold focus:bg-white outline-none">
                                     <option value="">請點擊選擇區域</option>
-                                    <option value="北部">北部</option><option value="中部">中部</option><option value="南部">南部</option><option value="東部">東部</option><option value="離島">離島</option>
+                                    <option value="北區">北區</option>
+                                    <option value="中區">中區</option>
+                                    <option value="南區">南區</option>
+                                    <option value="東區">東區</option>
+                                    <option value="離島">離島</option>
                                 </select>
                             </div>
+
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500">4. 實際發生日期 *</label>
                                 <input required type="date" name="entry.327643225" value={formData['entry.327643225']} onChange={(e)=>setFormData({...formData,'entry.327643225':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl font-bold text-slate-600" />
                             </div>
+
                             <div className="bg-white p-7 rounded-[2rem] shadow-lg border-l-[10px] border-sky-600 animate-card">
                                 <label className="block text-slate-800 font-black mb-3 text-lg underline decoration-sky-500">5. 異常問題簡述 *</label>
                                 <textarea required name="entry.2061708184" rows="4" onChange={(e)=>setFormData({...formData,'entry.2061708184':e.target.value})} className="w-full p-4 bg-slate-50 border-2 border-slate-100 rounded-2xl font-bold" placeholder="描述內容..."></textarea>
                             </div>
+
                             <button type="submit" className="w-full py-6 mt-4 rounded-[2.5rem] bg-slate-900 text-white text-2xl font-black shadow-2xl active:scale-95 transition-all">確認提交紀錄</button>
                         </form>
                     </main>
